resources/css/style.css
* {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
     box-sizing: border-box;
}

html {
  font-size: 16px;
}

body {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 100%;
  color: #000;
  background-color: #650302;
  margin: 0px;
  padding: 0px;
}

/* Set width of main containers */
.content, .width-80 {
  width: 80%;
  max-width: 960px;
  overflow: hidden;
}

/* Text and images will re-size to suit browser width */
.content h1, h2, p, img {
  max-width: 100%;
  height: auto;
  display: block;
}

/* Navigation Bar */

header nav {
  background-color: #dee0e2;
  top: 0;
  border-top: 1px solid black;
  border-bottom: 1px solid black;

  display: flex;
  align-items: center;
  justify-content: space-between;

  position: fixed;
  left: 50%;
  transform: translateX(-50%);

  width: 80%;
  max-width: 960px;
  height: auto;
  z-index: 1;
}

header nav div {
  padding: 0.5rem;
  height: inherit;
  border-left: 1px solid grey;
  border-right: 1px solid grey;
  flex-grow: 2;
  text-align: center;
}

header nav a {
  font-weight: bold;
  color: black;
  text-decoration: none;
}

/* Change background-color on hover */
header nav div:hover, .dropdown:hover .dropdown-content {
  background-color: #f2f3f4;
}

.mobile-navbar {
  display: none;
}

.dropdown-content {
  display: none;
  position: absolute;
  background-color: #f9f9f9;
  width: 10rem;
  height: auto;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 5;
}

.dropdown:hover .dropdown-content {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

.dropdown-content a {
  padding: 0.5rem 0;
  border-top: 1px solid black;
  border-bottom: 1px solid black;
}

/* Main Logo */

.main_logo {
  margin: 1rem auto;
  padding-top: 2rem;

  margin: header nav height;
}

.main_logo img {
  max-height: 200px; /* Image looks distorted if height exceeds 200px */
  width: 100%;
  margin: auto;
}

/* Main Content Container */

.content {
  margin: 0 auto;
  background-color: #FFF;

  display: flex;
}

/* Column 1 */

.column_1 {
  width: 10rem;
  padding: 0 10px;
  background-color: #dee0e2;

  display: flex;
  flex-direction: column;
}

.side-content {
  margin: 1rem auto;
  border: 1px solid black;

  display: flex;
  flex-direction: column;
}

.side-content-block-colour {
  height: 1.5rem;
  background-color: #650302;
  color: #FFF;

  display: flex;
  align-items: center;
  justify-content: center;
}

.side-content-news {
  height: auto;
  text-align: center;
  margin: 0.5rem;

  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

.side-content-news span, img {
  font-style: italic;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

.side-content-visitors {
  height: auto;
  text-align: center;
  margin: 0.5rem;

  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

.side-content-visitors span {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
}

.side-content-guestbook {
  height: auto;
  text-align: center;
  margin: 0.5rem;

  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

.side-content-guestbook span {
  padding: 0.5rem 0;
  font-style: italic;
}

.side-content-guestbook .guestbook-button {
  width: 98%;
  padding: 0.5rem;
  margin: 0.5rem 0;
  border: 1px solid grey;
  border-radius: 0.5rem;
}

.side-content-guestbook .guestbook-button:hover {
  background-color: #f2f3f4;
}

.cookies-policy {
  height: auto;
  margin: 0.5rem;
  text-align: center;

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
}

.cookies-policy span, img {
  font-style: italic;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

/* Column 2 */

.column_2 {
  width: 80%;
  padding: 0 0.5rem;
}

.column_2 h1 {
  margin-top: 1rem;
}

.column_2 img, iframe {
  width: 100%;
  padding: 0.2rem;
  padding-bottom: 0.7rem;
}

/* Text styles (using classes) */

.bold {
  font-weight: bold;
}

.italic {
  font-style: italic;
}

/* Footer */

footer {
  height: 5rem;
  background-color: #DFE3E2;
  margin: 0 auto 0 auto;
  padding: 1rem 0;
  border-top: 1px solid black;

  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

footer nav span {
  padding: 0 0.625rem;
}

/* Media Queries */

/* Typical iPad in portrait */
@media only screen and (max-width: 768px) {

}

/* Typical iPhone in portrait */

/* Media Queries */

@media only screen and (max-width: 1024px) {
  .content, .width-80 {
    width: 95%;
  }
  .main_logo img {
    width: 98%;
    margin: auto;
  }
  header nav {
    width: 95%;
  }
  footer {
    margin-bottom: 2.5%;
  }
  .column_2:hover {
    dropdown-content {
      display: none;
    }
  }
}

@media only screen and (max-width: 641px) {
  .column_1 {
    display: none;
  }
  .column_2 {
    width: 100%;
  }
  .column_2 h1, h2 {
    text-align: center;
  }
  .navbar {
    display: none:
  }
  .mobile-navbar {
    display: inline-block;
  }
  .dropdown-content {
    width: 95%;
  }
  .column_2:hover {
    .dropdown-content {
      display: none;
    }
  }
}

